--- a/platformio.ini
+++ b/platformio.ini
@@ -23,9 +23,9 @@ build_src_filter =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-monitor_port = com5
+monitor_port = COM4
 monitor_speed = 115200
-upload_port = com5
+upload_port = COM4
 build_src_filter =
   +<**/*.c>
   -<Controller.c>
